<resources>
    <string name="app_name">Album123</string>
    <string name="dialog_delete">delete</string>
    <string name="dialog_edit">edit</string>
    <string name="number_of_pictures">Number of pictures</string>
    <string name="_16_pictures">16 pictures</string>
    <string name="_14_pictures">14 pictures</string>
    <string name="_18_pictures">18 pictures</string>
    <string name="_20_pictures">20 pictures</string>
    <integer name="photo_list_preview_columns">3</integer>

</resources>
